[package]
name = "rustbox"
version = "0.1.0"
authors = ["jrconlin <jconlin+git@mozilla.com>"]

[dependencies]
rocket="0.3"
rocket_codegen="0.3"
serde="1.0"
serde_json="1.0"
serde_derive="1.0"
mysql="12.2"
reqwest="0.8"  # for HTTP Client calls.


[dependencies.rocket_contrib]
default-features=false

[dependencies.mysql]
version="*"
#features=["ssl"]
